# superbible7

./: Cargo.toml  README.md  rustfmt.toml
examples/: ch02.rs  ch03.rs
src/: lib.rs  main.rs  win32.rs
src/gl/: program.rs  shader.rs  util.rs  vertex_array.rs  vertex_attribute.rs
src/win32/: boolean.rs  c_types.rs  constants.rs  error_code.rs  gdi32.rs  handles.rs  kernel32.rs  opengl32.rs  string_utils.rs  structures.rs  typedef.rs  user32.rs
